Increased the size of the copy module to prevent clipping

--- a/public/stylesheets/multitask/general.css
+++ b/public/stylesheets/multitask/general.css
@@ -268,9 +268,9 @@ input.btn_gris{width:130px;height:28px;background:url(/images/multitask/bg_eleme
 #mix .cont_columna.doble{margin-top:10px;}
 
 /* capa slide mix */
-.mix_bloque{width:900px;height:221px;background:url(/images/multitask/bg_bloquemix.png) no-repeat 0 0;padding:26px;position:relative;left:-3px;top:-3px;overflow:hidden;margin-bottom:15px;}
+.mix_bloque{width:900px;height:229px;background:url(/images/multitask/bg_bloquemix.png) no-repeat 0 0;padding:26px;position:relative;left:-3px;top:-3px;overflow:hidden;margin-bottom:15px;}
 .mix_visible{width:900px;height:221px;overflow:hidden;position:absolute;}
-.mix_sub{width:900px;height:221px;position:absolute;left:900px;color:#343434;}
+.mix_sub{width:900px;height:260px;position:absolute;left:900px;color:#343434;}
 #sub_home{position:absolute;left:0;}
 /* capa informacion */
 .mix_sub .mix_contenido{width:599px;height:221px;float:left;position:relative;padding-right:23px;}
